--- a/App/app.ipynb
+++ b/App/app.ipynb
@@ -18,7 +18,6 @@
    "outputs": [],
    "source": [
     "# Импортируем необходимые библиотеки для нашего приложения\n",
-    "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from flask import Flask, request, render_template\n",
@@ -31,9 +30,21 @@
    "execution_count": 3,
    "id": "e24b3dff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\komma\\\\datascientist\\\\VKR\\\\App'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "current_dir = os.path.abspath(os.getcwd())"
+    "current_dir = os.path.abspath(os.getcwd())\n",
+    "current_dir"
    ]
   },
   {
@@ -56,7 +67,7 @@
     "# Загружаем модель и определяем параметры функции  -  будущие входы для модели (всего 12 параметров)\n",
     "\n",
     "def set_params(param1, param2, param3, param4, param5, param6, param7, param8, param9, param10, param11, param12):\n",
-    "    print(param1)\n",
+    "    print(current_dir + r\"/saved_models/\" + model_name + r\"/\")\n",
     "    model = keras.models.load_model(current_dir + r\"/saved_models/\" + model_name + r\"/\")\n",
     "    prediction = model.predict([param1, param2, param3, param4, param5, param6, param7, param8, param9, param10, param11, param12])\n",
     "\n",
@@ -78,16 +89,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e52d8aed",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
-      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
     },
@@ -95,9 +105,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [30/Mar/2023 18:07:24] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [30/Mar/2023 18:07:24] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "C:\\Users\\komma\\datascientist\\VKR\\App/saved_models/model2/\n",
+      "1/1 [==============================] - 0s 250ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [07/Apr/2023 19:50:30] \"POST / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "C:\\Users\\komma\\datascientist\\VKR\\App/saved_models/model2/\n",
+      "1/1 [==============================] - 0s 109ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [07/Apr/2023 19:50:50] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -111,6 +175,7 @@
     "        # получим данные из наших форм и кладем их в список, который затем передадим функции set_params\n",
     "        for i in range(1,13,1):\n",
     "            param = request.form.get(f'param{i}')\n",
+    "            print (param)\n",
     "            param_lst.append(float(param))\n",
     "            \n",
     "        message = set_params(*param_lst)\n",
@@ -147,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
